--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Todo App</title>
-  <!-- Tailwind CSS -->
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>SCRIBE - online todolist</title>
+  <link rel="stylesheets" href="./src/index.css"/>
   <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/6ab2a85903.js" crossorigin="anonymous"></script>
 </head>
