add google login, connect CRUD todos and CRUD listboards with server & database, modified styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SCRIBE - online todolist</title>
   <link rel="stylesheets" href="./src/index.css"/>
+  <!-- Google Identity Service -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
   <!-- Fontawesome -->
   <script src="https://kit.fontawesome.com/6ab2a85903.js" crossorigin="anonymous"></script>
 </head>
